edits to manuscript

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -1,4 +1,15 @@
-@Article{conaway2016similar,
+@incollection{brooks1978nonanalytic,
+  author      = {Brooks, Lee R},
+  title       = {Nonanalytic concept formation and memory for instances},
+  editor      = {Rosch, Eleanor and Lloyd, Barbara B},
+  booktitle   = "Cognition and Categorization",
+  publisher   = "Elbaum",
+  address     = "Hillsdale, NJ",
+  year        = 1978,
+  pages       = {169--211},
+}
+
+@article{conaway2016similar,
   author="Conaway, Nolan and Kurtz, Kenneth J.",
   title="Similar to the category, but not the exemplars: A study of generalization",
   journal="Psychonomic Bulletin {\&} Review",
@@ -7,41 +18,6 @@
   abstract="Reference point approaches have dominated the study of categorization for decades by explaining classification learning in terms of similarity to stored exemplars or averages of exemplars. The most successful reference point models are firmly grounded in the associative learning tradition---treating categorization as a stimulus generalization process based on inverse exponential distance in psychological space augmented by a dimensional selective attention mechanism. We present experiments that pose a significant challenge to popular reference point accounts which explain categorization in terms of stimulus generalization from exemplars, prototypes, or adaptive clusters. DIVA, a similarity-based alternative to the reference point framework, provides a successful account of the human data. These findings suggest that a successful psychology of categorization may need to look beyond stimulus generalization and toward a view of category learning as the induction of a richer model of the data.",
   issn="1531-5320",
   doi="10.3758/s13423-016-1208-1",
-}
-
-@book{nersessian2008,
-  author = {N. J. Nersessian},
-  title = {Creating Scientific Concepts},
-  publisher = {MIT Press},
-  address = {Cambridge, MA},
-  year = {2008}
-}
-
-@article{mack2013,
-  author = {M. L. Mack and A. R. Preston and B. C. Love},
-  title = {Decoding the brain's algorithm for categorization from its neural implementation},
-  journal = {Current Biology},
-  volume = {23},
-  pages = {2023-2027},
-  year = {2013}
-}
-
-
-
-@book{margolis2015,
-  author = {E. Margolis and S. Laurence},
-  title = {The Conceptual Mind: {N}ew Directions in the Study of Concepts},
-  publisher = {MIT Press},
-  address = {Cambridge, MA},
-  year = {2015}
-}
-
-@book{pothoswills2011,
-  author = {E. M. Pothos and A. J. Wills},
-  title = {Formal Approaches in Categorization},
-  publisher = {Cambridge University Press},
-  address = {Cambridge, UK},
-  year = {2011}
 }
 
 @book{garner1974processing,
@@ -95,6 +71,23 @@
   publisher={Academic Press}
 }
 
+@article{mack2013,
+  author = {M. L. Mack and A. R. Preston and B. C. Love},
+  title = {Decoding the brain's algorithm for categorization from its neural implementation},
+  journal = {Current Biology},
+  volume = {23},
+  pages = {2023-2027},
+  year = {2013}
+}
+
+@book{margolis2015,
+  author = {E. Margolis and S. Laurence},
+  title = {The Conceptual Mind: {N}ew Directions in the Study of Concepts},
+  publisher = {MIT Press},
+  address = {Cambridge, MA},
+  year = {2015}
+}
+
 @article{marsh1999inadvertent,
   title={The inadvertent use of prior knowledge in a generative cognitive task},
   author={Marsh, Richard L and Ward, Thomas B and Landau, Joshua D},
@@ -117,6 +110,14 @@
   publisher={American Psychological Association}
 }
 
+@book{nersessian2008,
+  author = {N. J. Nersessian},
+  title = {Creating Scientific Concepts},
+  publisher = {MIT Press},
+  address = {Cambridge, MA},
+  year = {2008}
+}
+
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
@@ -137,6 +138,14 @@
   pages={39},
   year={1986},
   publisher={American Psychological Association}
+}
+
+@book{pothoswills2011,
+  author = {E. M. Pothos and A. J. Wills},
+  title = {Formal Approaches in Categorization},
+  publisher = {Cambridge University Press},
+  address = {Cambridge, UK},
+  year = {2011}
 }
 
 @article{rosch1975cognitive,
@@ -191,6 +200,16 @@
   number={4820},
   pages={1317--1323},
   year={1987}
+}
+
+@article{shi10exemplar,
+  title = {Exemplar models as a mechanism for performing {B}ayesian inference},
+  author = {L. Shi and T. L. Griffiths and N. H. Feldman and A. N. Sanborn},
+  journal = {Psychonomic Bulletin \& Review},
+  volume = {17},
+  number = {4},
+  pages = {443-464},
+  year = {2010}
 }
 
 
