xor-cluster-row sample plot works

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -248,6 +248,16 @@ Following generation, participants completed a generalization phase wherein they
 
 \subsection{Results}
 
+It is firstly worth noting that we observed a substantial degree of individual differences in our data. In Figure \ref{fig:e1-samples} we have plotted sample data from several participants, from which it evident that different participants assumed qualitatively distinct approaches to category generation. In this section we will focus on what can be learned from analyzing the data in aggregate, but in later sections we will explore how individual differences can be explained.
+
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{e1-samples.pgf}
+    \caption{Sample categories generated in Experiment 1. }
+    \label{fig:e1-samples}
+    \end{center}
+\end{figure}
+
 To evaluate the role of contrast in category generation, we computed the number of times each stimulus was generated, as a function of its average city-block distance from members of the experimenter-defined ``Alpha'' category. These data, shown in Figure \ref{fig:e1-distanceplots}, reveal a clear pattern: examples that are highly distant from members of the experimenter-defined categories are more likely to be generated into a new category. 
 
 \begin{figure}
@@ -277,34 +287,8 @@ With respect to ranges along each axis (X, Y), the generated categories from eac
     \end{center}
 \end{figure}
 
-On average, the axis ranges of generated categories tends to reflect those of the experimenter-defined categories. However, this cannot be said for the correlation between features in the generated categories.
+On average, the axis ranges of generated categories tends to reflect those of the experimenter-defined categories. However, this cannot be said for the correlation between features in the generated categories. As in the experimenter-defined categories, 
 
-
-\begin{figure}
-    \begin{center}
-    \inputpgf{figs/}{e1-samples.pgf}
-    \caption{Sample categories generated in Experiment 1. }
-    \label{fig:e1-samples}
-    \end{center}
-\end{figure}
-
-% ----  yrange: Cluster, Row
-% T = 4.5714, p = 1.16282e-05 Means: 0.9023 (0.7495), 0.3566 (0.5553),
-
-% ----  yrange: Cluster, XOR
-% T = -3.952, p = 0.0001313583    Means: 0.9023 (0.7495), 1.4224 (0.6858),
-
-% ----  yrange: Row, XOR
-% T = -9.2603, p = 0.0    Means: 0.3566 (0.5553), 1.4224 (0.6858),
-
-% ---- Row X vs. Y:
-% T = 11.1735, p = 0.0    Means: 1.5738 (0.5678), 0.3566 (0.5553),
-
-% ---- Cluster X vs. Y:
-% T = -0.1258, p = 0.9002773681   Means: 0.8828 (0.7768), 0.9023 (0.7495),
-
-% ---- XOR X vs. Y:
-% T = -1.331, p = 0.1885039643    Means: 1.2586 (0.7542), 1.4224 (0.6858),
 
 % ---- Cluster positive correlation?
 % 0.145647334125
@@ -314,20 +298,6 @@ On average, the axis ranges of generated categories tends to reflect those of th
 % 0.0456817132064
 % 0.0213027864542
 
-% ---- XOR has more total range than Cluster?
-% T = -4.8918, p = 3.1371e-06 Means: 1.7852 (0.9012), 2.681 (1.1023),
-
-% ---- XOR has more total range than Row?
-% T = -4.3418, p = 3.0207e-05 Means: 1.9303 (0.7412), 2.681 (1.1023),
-
-% ----  yrange: Cluster, Row
-% T = 4.5714, p = 1.16282e-05 Means: 0.9023 (0.7495), 0.3566 (0.5553),
-
-% ----  yrange: Cluster, XOR
-% T = -3.952, p = 0.0001313583    Means: 0.9023 (0.7495), 1.4224 (0.6858),
-
-% ----  yrange: Row, XOR
-% T = -9.2603, p = 0.0    Means: 0.3566 (0.5553), 1.4224 (0.6858),
 
 % ----  correlation: Cluster, Row
 % T = 2.029, p = 0.044618689  Means: 0.0753 (0.4058), -0.0587 (0.3196),
