whoops quick fix

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -302,7 +302,7 @@ The negative correlations observed in the XOR condition may therefore indicate s
 
 In Experiment 1, we observed that participants are less likely to generate stimuli that are highly similar to members of existing categories. Effectively, this demonstrates that members of known categories influence where new categories will be generated within the domain. A related question, however, concerns whether category contrast influences the distributional structure of generated categories. Specifically, does the shape of the unoccupied area within the domain influence the types of categories people generate?
 
-\begin{figure}
+\begin{figure}q
     \begin{center}
     \input{figs/e2-conditions.pgf}
     \caption{Category types tested in Experiment 2.}
