--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -248,17 +248,18 @@ Following generation, participants completed a generalization phase wherein they
 
 \subsection{Results}
 
-It is firstly worth noting that we observed a substantial degree of individual differences in our data. In Figure \ref{fig:e1-samples} we have plotted sample data from several participants, from which it evident that different participants assumed qualitatively distinct approaches to category generation. In this section we will focus on what can be learned from analyzing the data in aggregate, but in later sections we will explore how individual differences can be explained.
+To begin, it is worth noting that we observed a substantial degree of individual differences in our data. In Figure \ref{fig:e1-samples} we have plotted sample data from several participants, from which it evident that different participants assumed qualitatively distinct approaches to category generation. In this section we will focus on what can be learned from analyzing the data in aggregate, but in later sections we will explore how individual differences can be explained.
 
 \begin{figure}
     \begin{center}
     \inputpgf{figs/}{e1-samples.pgf}
     \caption{Sample categories generated in Experiment 1. }
     \label{fig:e1-samples}
+    \nbcnote{I selected these at random, we can pick more representative samples later.}
     \end{center}
 \end{figure}
 
-To evaluate the role of contrast in category generation, we computed the number of times each stimulus was generated, as a function of its average city-block distance from members of the experimenter-defined ``Alpha'' category. These data, shown in Figure \ref{fig:e1-distanceplots}, reveal a clear pattern: examples that are highly distant from members of the experimenter-defined categories are more likely to be generated into a new category. 
+To evaluate the role of contrast in category generation, we computed the number of times each stimulus was generated, as a function of its average city-block distance from members of the experimenter-defined ``Alpha'' category. These data, shown in Figure \ref{fig:e1-distanceplots}, reveal a clear pattern: examples that are more distant from members of the experimenter-defined categories are more likely to be generated into a new category. 
 
 \begin{figure}
     \begin{center}
@@ -272,11 +273,11 @@ To evaluate the role of contrast in category generation, we computed the number 
 \end{figure}
 
 
-Figure \ref{fig:e1-distanceplots} also depicts, for each participant, the average amount of distance between members of the generated category (\textit{within-class} distance) against the average amount of distance between members of the generated and experimenter-defined category (\textit{between-class} distance). These data also reveal a systematic pattern: the majority of participants generated categories with more between-class distance than within-class distance. That is, members of the generated category tended to be more similar to one another than to members of the experimenter-defined category. T-Tests comparing the amount of within- and between- class distance among the categories support this claim in each condition: Cluster, $t(63) = 11.43$, $p < 0.001$; Row, $t(60) = 13.16$, $p < 0.001$; and XOR, $t(57) = 3.64$, $p < 0.001$. These results provide clear evidence of an effect of category contrast: participants prefer to generate categories that are dissimilar to the learned category but maintain some level of internal cohesion. 
+Figure \ref{fig:e1-distanceplots} also depicts, for each participant, the average amount of distance between members of the generated category (\textit{within-class} distance) against the average amount of distance between members of the generated and experimenter-defined category (\textit{between-class} distance). These data also reveal a systematic pattern: the majority of participants generated categories with more between-class distance than within-class distance. That is, members of the generated category tended to be more similar to one another than to members of the experimenter-defined category. To formally evaluate this claim, we conducted T-Tests comparing the amount of within- and between- class distance in each condition. All conditions possessed greater between-class distance: Cluster, $t(63) = 11.43$, $p < 0.001$; Row, $t(60) = 13.16$, $p < 0.001$; and XOR, $t(57) = 3.64$, $p < 0.001$. These results provide clear evidence of an effect of category contrast: participants prefer to generate categories that are dissimilar to the learned category but maintain some level of internal cohesion. 
 
-The secondary goal of this experiment was to replicate the classic finding that generated and previously-known categories share distributional properties. To evaluate this, we computed, for each participant, the range of their generated category along each axis (X, Y), as well as the correlation between features. These data, shown in Figure \ref{fig:e1-statsboxes}, reveal broad individual differences: within each condition, participants generated categories spanning the entire X- and Y- axis as well as categories that spanned very little along each dimension. Likewise, in each condition participants generated categories possessing strongly positive, neutral, and strongly negative correlations between the dimensions. Comparing the distributional statistics between conditions yields a broad-yet-incomplete replication of the classic effect. 
+The secondary goal of this experiment was to replicate the classic finding that generated categories often possess the same distributional properties as previously-known categories. For each generated category, we computed the category range along each axis (X, Y), as well as the correlation between features. These data, shown in Figure \ref{fig:e1-statsboxes}, reveal broad individual differences: within each condition, participants generated categories spanning the entire X- and Y- axis as well as categories that spanned very little along each. Likewise, in each condition participants generated categories possessing strongly positive, neutral, and strongly negative correlations between the dimensions. Comparing the distributional statistics between conditions yields a broad-yet-incomplete replication of the classic effect. 
 
-With respect to ranges along each axis (X, Y), the generated categories from each condition tend to reflect the ranges of the experimenter-defined categories. The categories generated in the Cluster condition were less widely distributed compared to Row, $t(123) = 5.61$, $p < 0.001$, and XOR, $t(120) = 2.68$, $p = 0.008$. Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. However, whereas the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$), the generated categories in the XOR condition tended to possess a \textit{negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This is the opposite of what can be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features).
+With respect to ranges along each axis (X, Y), the generated categories from each condition tend to reflect the ranges of the experimenter-defined categories. The categories generated in the Cluster condition were less widely distributed along the X-axis compared to Row, $t(123) = 5.61$, $p < 0.001$, and XOR, $t(120) = 2.68$, $p = 0.008$. Likewise, categories generated in the Row condition had less Y-axis range compared to Cluster, $t(123) = 4.57$, $p < 0.001$ and XOR $t(117) = 9.26$, $p < 0.001$, and categories from the Cluster condition had less Y-axis range compared to XOR, $t(120) = 3.95$, $p < 0.001$. However, whereas the correlations in the Cluster and Row conditions were not systematically positive or negative ($ps > 0.1$), the generated categories in the XOR condition tended to possess \textit{negatively} correlated dimensions, $t(57) = 2.04$, $p = 0.046$. This finding is notable, as it is the opposite of what would be expected, assuming learners are emulating the distributional structure of the experimenter-defined class (which possesses perfectly positively correlated features).
 
 \begin{figure}
     \begin{center}
@@ -291,18 +292,18 @@ With respect to ranges along each axis (X, Y), the generated categories from eac
 \subsection{Discussion}
 
 
-In Experiment 1 we sought to test whether category contrast systematically influences categories that are creatively generated by participants. We found strong evidence for effects of category contrast: participants were more likely to generate stimuli that are more distant from (i.e., less similar to) members of a previously-learned category, and members of participant-generated categories tended to be more similar to one another than to members of previously-learned categories. We also partially replicated the classic finding that the distributional structure of generated categories reflects that of previously learned categories \citep{jern2013probabilistic,ward1994structured}: members of generated categories were more widely distributed along dimensions which were widely distributed in the experimenter-defined category. 
+In Experiment 1 we sought to test whether category contrast imposes constraints on creative generation. We found strong evidence for effects of category contrast: participants were more likely to generate stimuli that are more distant from (i.e., less similar to) members of a previously-learned category, and members of participant-generated categories tended to be more similar to one another than to members of previously-learned categories. We also partially replicated the classic finding that the distributional structure of generated categories reflects that of previously learned categories \citep{jern2013probabilistic,ward1994structured}: members of generated categories were more widely distributed along dimensions which were widely distributed in the experimenter-defined category. 
 
-A notable divergence, however, was the finding that the feature correlations within the categories generated in the XOR condition tended oppose that of the experimenter-defined category. While this is difficult to account for within existing theoretical approaches \citep[i.e.,][]{jern2013probabilistic}, it can be concisely explained from a category contrast perspective. Within the XOR condition, individuals who seek to generate a category that is perceptually distinct from what is already known are left with only the upper-left and bottom-right quadrants, as members of the experimenter-defined XOR category lie in the bottom-right and top-left quadrants. If examples are generated into both of the available quadrants, the generated category will possess a strongly negative correlation, opposing that of the experimenter-defined class.
+Notably, however, we also found that participants who learned an XOR category (composed of exemplars following a positive diagonal, see Figure \ref{fig:e1-conditions}) tended to generate items according to a \textit{negative} feature correlation -- the opposite of what was present in the previously learned category. While this may be difficult to account for under existing theoretical approaches (which assume generated categories follow the same distributional structure as known categories), it can be concisely explained from a category contrast perspective. Specifically, within the XOR condition, individuals who seek to generate a category that is perceptually distinct from what is already known are left with only the upper-left and bottom-right quadrants of the space, as members of the previously-learned XOR category lie in the bottom-left and top-right. If examples are generated into both of the available quadrants, the generated category will possess a strongly negative correlation, opposing that of the experimenter-defined class.
 
-The negative correlations observed in the XOR condition may therefore indicate something further about the role of category contrast: constraints on creative generation imposed by category contrast may not simply influence the \textit{location} of generated categories, but also their distributional structure. In Experiment 2, we test this claim more systematically.
+Thus, while the core results of Experiment 1 indicate that generated categories systematically contrast with what is already known, the negative correlations observed in the XOR condition may signal something further. That is, the constraints on creative generation imposed by category contrast may not simply influence the \textit{location} of generated categories, but also their distributional structure. In Experiment 2, we test this claim more systematically.
 
 
 \section{Experiment 2}
 
-In Experiment 1, we observed that participants are less likely to generate stimuli that are highly similar to members of existing categories. Effectively, this demonstrates that members of known categories influence where new categories will be generated within the domain. A related question, however, concerns whether category contrast influences the distributional structure of generated categories. Specifically, does the shape of the unoccupied area within the domain influence the types of categories people generate?
+To test whether category contrast influences the distributional structure of generated categories, we repeated Experiment 1 using two new category types, depicted in Figure \ref{fig:e2-conditions}. The category types possess an identical distributional structure (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category lies in the bottom-center of the space, and the `Middle' category lies in the center. Although this manipulation may be viewed as somewhat `weak', the distributional equality of these conditions is key to the design of the experiment: if the structure of previously learned categories were the only influence on the structure of generated categories, we should observe no difference between these two conditions with respect to distributional structure.
 
-\begin{figure}q
+\begin{figure}
     \begin{center}
     \input{figs/e2-conditions.pgf}
     \caption{Category types tested in Experiment 2.}
@@ -310,14 +311,8 @@ In Experiment 1, we observed that participants are less likely to generate stimu
     \end{center}
 \end{figure}
 
-To address this question, we developed two new categories within the same domain as Experiment 1 (see Figure \ref{fig:e2-conditions}). The categories possess an identical distributional (both are tight clusters of examples with a neutral feature correlation), and only differ slightly in their Y-axis position: the `Bottom' category is a tight cluster in the bottom-center of the space, and the `Middle' category lies in the center of stimulus space. 
 
-By consequence, approaches focusing on the emulation of distributional structure \citep[i.e.,][]{jern2013probabilistic} would fail to predict any differences in the types of categories generated after learning the 
-
-Importantly, however, the slight change to the position along the Y-axis produces considerable changes to the shape of the space that remains unoccupied after learning. 
-
-
-the PACKER model predicts strong between-condition differences. According to PACKER, the nature of the space not occupied by the existing categories should determine where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
+Alternatively, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. Specifically, participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is not imposed in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space -- accordingly, participants should be more likely to utilize both of these areas.
 
 
 \subsection{Participants \& Materials}
@@ -330,6 +325,28 @@ The procedure was exactly as in Experiment 1: participants first completed a sho
 
 
 \subsection{Results}
+
+
+Because the conditions differ only in the Y-axis position of the experimenter-defined category, we began by comparing the conditions in terms of the frequency with which participants generated examples above and below the categories: we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. Fisher's Exact Tests reveal that more Middle participants generated an exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
+
+\begin{table}
+\begin{center} 
+\caption{Experiment 2 results.} 
+\label{table:e2-subset-table} 
+\vskip 0.12in
+\begin{tabular}{ l r r}
+    \textbf{Middle}         & Used top row & No top row \\
+    \hline
+    Used bottom row       &  28 & 18  \\
+    No bottom row          &  11 &  4  \\
+    \\
+    \textbf{Bottom}         & Used top row & No top row \\
+    \hline
+    Used bottom row        & 16 & 8 \\
+    No bottom row          & 31 & 6 \\
+\end{tabular}
+\end{center} 
+\end{table}
 
 \subsection{Discussion}
 
