--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -177,6 +177,8 @@ where $f(x_j)$ is a function specifying each exemplar's contribution to generati
 
 As noted above, PACKER proposes that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\phi < 0$, and $\gamma > 0$. Negative $\phi$ values encourage $y$ to be distant from contrast categories (as similarity to contrast category exemplars are subtracted during aggregation). Positive $\gamma$ values encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from contrast categories is equal to the attraction effect to the target category. See Figure \ref{fig:packer-examples} for an illustration of how these parameters are used.
 
+This constraint, however, only serves to signify one possible account of category generation: the nature of PACKER's account can be drastically altered through changes to the $\phi$ and $\gamma$ parameters. Furthermore, by fitting these parameters to a dataset, one can describe the relative roles of between-class contrast and within-class similarity in generation. For example, as will be discussed in more detail below, PACKER is formally equivalent to the copy-and-tweak model proposed by \cite{jern2013probabilistic} when $\phi = 0$ and $\gamma = 1$. Likewise, when $\phi < 0$ and $\gamma = 0$, PACKER represents a contrast-only generation mode, relying exclusively on contrast when generating new categories. Finally, when $\phi = \gamma < 0$, PACKER represents a ``pure-packing'' approach, placing exemplars in any unoccupied area of the domain. Thus, beyond specifying PACKER's core proposal, the $\phi$ and $\gamma$ allow the us to address a wide variety of qualitatively distinct generation strategies.
+
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 % 
 \begin{equation}
@@ -192,7 +194,7 @@ It is worth noting that PACKER represents just one of many possible models that 
 
 \subsubsection{Relation Between PACKER and Copy-And-Tweak}
 
-The PACKER model is in many senses similar to the copy-and-tweak model reported by \cite{jern2013probabilistic}: both models are exemplar-based, and both models generate new items according to their similarity to known members of the target class. PACKER diverges from from the copy-and-tweak model only in the inclusion of a contrast mechanism, enabling generation according to dissimilarity to members of opposing categories. By consequence, copy-and-tweak can be realized as a parameterization of the PACKER model that is insensitive to category contrast. Specifically, when $\phi = 0$ and $\gamma = 1$ (see Figure \ref{fig:packer-examples}, panel B), PACKER is not influenced by similarity to members of opposite categories, and is mathematically equivalent to a copy-and-tweak approach.
+The PACKER model is in many senses similar to the copy-and-tweak model reported by \cite{jern2013probabilistic}: both models are exemplar-based, and both models generate new items according to their similarity to known members of the target class. PACKER diverges from from the copy-and-tweak model only in the inclusion of a contrast mechanism, enabling generation according to dissimilarity to members of opposing categories. By consequence, copy-and-tweak can be realized as a parameterization of the PACKER model that is insensitive to category contrast. Specifically, when $\phi = 0$ and $\gamma = 1$ (see Figure \ref{fig:packer-examples}, panel B), PACKER is not influenced by similarity to members of opposite categories, and is mathematically equivalent to a copy-and-tweak approach. 
 
 In this paper, we report simulations using this copy-and-tweak model. The model we test is identical to PACKER, under the constraints that $\phi = 0$ and $\gamma = 1$, and is a continuous-dimension adaptation of the model tested by \cite{jern2013probabilistic}. Due to their mathematical equivalence, the comparison between PACKER and copy-and-tweak provides a test of the explanatory value of the contrast mechanism: the account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage.
 
@@ -315,19 +317,37 @@ To test whether category contrast influences the distributional structure of gen
 Alternatively, participants seeking to make a perceptually distinct category would be more likely to distribute members of the generated category into areas that are distant from members of known categories. Thus, if category contrast influences the distributional structure of the categories people generate, then we should observe different types of categories according to the shape of the space that is unoccupied by members of previously learned categories. Specifically, participants assigned to learn the Bottom category would be less likely to generate exemplars into the lower regions of the stimulus space (as these areas possess greater similarity to members of the Bottom category), preferring instead to distribute exemplars across the upper region of the space. This constraint is not imposed in the Middle condition, as the Middle category exemplars are equidistant to the upper and lower regions of the space -- accordingly, participants should be more likely to utilize both of these areas.
 
 
-\subsection{Participants \& Materials}
+\subsection{Participants, Materials, \& Procedure}
 
-122 participants were recruited from Amazon Mechanical Turk. 61 participants were randomly assigned to the Middle and Bottom conditions each. The stimuli were exactly as in Experiment 1. Again, the assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
-
-\subsection{Procedure}
-
-The procedure was exactly as in Experiment 1: participants first completed a short training phase, followed by the generation phase, followed by the generalization phase (data from this phase is not discussed in this report).
+122 participants were recruited from Amazon Mechanical Turk. 61 participants were randomly assigned to the Middle and Bottom conditions each. The stimuli were exactly as in Experiment 1. Again, the assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants. The procedure was exactly as in Experiment 1: participants first completed a short training phase, followed by the generation phase, followed by the generalization phase (data from this phase is not discussed in this report).
 
 
 \subsection{Results}
 
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{e2-samples.pgf}
+    \caption{Sample categories generated in Experiment 2. }
+    \label{fig:e2-samples}
+    \end{center}
+\end{figure}
 
-Because the conditions differ only in the Y-axis position of the experimenter-defined category, we began by comparing the conditions in terms of the frequency with which participants generated examples above and below the categories: we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. Fisher's Exact Tests reveal that more Middle participants generated an exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
+As in Experiment 1, we observed broad differences in the generation approach taken by different participants.  To characterize the nature of these differences, Figure \ref{fig:e2-samples} depicts sample categories generated by participants. The data from each condition in Figure \ref{fig:e2-samples} is organized into four columns based on commonly observed patterns of generation: a `Cluster' type of tightly-clustered examples,   `Row' and `Column' types of exemplars widely distributed along the one axis but narrowly along the other, and a `Corners' type, wherein participants placed exemplars in disparate corners of the space. As before, in this section we focus no what can be concluded from analyzing the data in aggregate, but in a later section we will focus more specifically on explaining the individual differences.
+
+We began our analysis by again testing for the broad influence of category contrast on generation. As in Experiment 1, we computed the frequency each stimulus was generated as a function of its average distance from members of the experimenter defined category, as well as each participant's average within- and between- category distance. These data, shown in Figure \ref{fig:e2-distanceplots}, yield highly similar results. Stimuli that are more distant from members of the experimenter=-defined category were more frequently generated, and the categories in each condition tended to possess more between-class than within-class distance: Bottom, $t(60) = 5.5$, $p < 0.001$; Middle, $t(60) = 2.71$, $p = 0.009$. 
+
+We did, however, observe a notable subgroup of participants in each condition who generated categories with more within-class than between-class distance. Upon manual inspection, many of these individuals appear to have assumed a `Corners' strategy, placing exemplars in disparate corners of the space, thus producing much more within-class distance, see Figure \ref{fig:e2-samples} for examples.
+
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{e2-distanceplots.pgf}
+    \caption{Experiment 2 results. \textit{Left}: Frequency of generation as a function of distance from members of the experimenter-defined category. \textit{Right}: Scatter plot of within-class versus between-class distance in each of the participant-generated categories.}
+    \label{fig:e2-distanceplots}
+    \end{center}
+\end{figure}
+
+
+Because the conditions differ only in the Y-axis position of the experimenter-defined category, we then compared the conditions in terms of the frequency with which participants generated examples above and below the categories. Specifically, we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. Fisher's Exact Tests reveal that more Middle participants generated an exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
 
 \begin{table}
 \begin{center} 
@@ -348,10 +368,15 @@ Because the conditions differ only in the Y-axis position of the experimenter-de
 \end{center} 
 \end{table}
 
+
+
+
 \subsection{Discussion}
 
 
+\section{Simulations}
 
+\section{General Discussion}
 
 
 
